# CONCORDIA

./: .env  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  config.yaml.rac  config_o3mini_test.yaml  debug_llm_call.py  mkdocs.yml  pyproject.toml  pytest.ini  run_concord_tests.sh  run_concord_tests_o3mini.sh  sentence_transformers.py  test_argo_gateway.py  test_verbose_response.py
.github/workflows/: ci.yml  deploy-docs.yml
concord/: __init__.py  cli.py  config.yaml  constants.py  embedding.py  metrics.py  modes.py  pipeline.py  retrieval.py  utils.py  vector_store.py
concord/io/: csv_loader.py  loader.py
concord/llm/: argo_gateway.py  prompt_buckets.py  prompt_builder.py  prompts.py  template_store.py
concord/local/: embeddings.py
data/: vector_store.json
docs/: api.md  benchmarking.md  index.md  usage.md
eval/: README.md  evaluate_gold_standard.py  evaluate_suite.py  synthetic_gold_standard_v1.csv
eval/benchmark_results/: summary_metrics.csv
eval/datasets/: Benchmark_subset__200_pairs_no_label_v1.csv  Benchmark_subset__200_pairs_v1.csv  Benchmark_subset__24_pairs_play.csv  Benchmark_subset__24_pairs_v1.csv
eval/results/: evaluation_metrics.json
example_data/: annotations_buckets_gpt4o_v4.csv  annotations_buckets_o3mini.csv  annotations_gpt4o.csv  annotations_gpt4o_v2.csv  annotations_gpt4o_v3.csv  annotations_simhint_o3mini.csv  annotations_simhint_v1.csv  annotations_test.concordia copy 2.csv  annotations_test.concordia copy.csv  annotations_test.concordia.csv  annotations_test.concordia_03mini_gateway_change.csv  annotations_test.concordia_03mini_unkwns.csv  annotations_test.concordia_gpt4o.csv  annotations_test.concordia_gpt4o_after_big_changes.csv  annotations_test.concordia_gpt4o_gateway_change.csv  annotations_test.concordia_o3mini_crash.csv  annotations_test.concordia_o3mini_few_unkowns.csv  annotations_test.csv  annotations_test.duo.csv  annotations_test.json  annotations_test.llm.csv  annotations_test.simhint.csv  annotations_test.simhint_gpt4o.csv  annotations_test.simhint_gpt4o_v2.csv  annotations_test.simhint_gpt4o_v3.csv  annotations_test.simhint_o3 copy.csv  annotations_test.simhint_o3.csv  annotations_test.tsv  annotations_test_buckets_gpt4o.csv  annotations_test_buckets_gpt4o.csv--force  annotations_test_buckets_o3.csv  changes.subset.concordia.csv  changes.subset_100.concordia.csv  changes.subset_100.csv  gpt4o_refactor_test.csv  gpt4o_results_v2.1_vote_new-column.csv  gpt4o_results_v2.1_zero.csv  gpt4o_results_v2_vote_new_column.csv  gpt4o_results_v2_zero.csv  gpto3mini_results_v2.1_vote.csv  (+25 more)
scripts/: benchmark_optimizations.py  run_concord_tests.sh  run_concord_tests_o3mini.sh
tests/: __init__.py  test_embedding.py  test_llm_roundtrip.py  test_modes.py  test_pipeline.py  test_prompts.py
(+391 files in other folders)
