[tool.poetry]
name = "concordia"
version = "0.0.1"
description = "CONCORDIA – genome annotation concordance engine"
authors = ["Your Name <you@anl.gov>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
httpx = "^0.27"
sentence-transformers = "^2.7"
torch = "^2.2"
typer = "^0.9"

[tool.poetry.scripts]
concord = "concord.cli:app"
