[tool.poetry]
name        = "concordia"
version     = "0.0.1"
description = "CONCORDIA – genome-annotation concordance engine"
authors     = ["Your Name <you@anl.gov>"]
license     = "MIT"
readme      = "README.md"

# Tell Poetry to package the code in the `concord/` directory
packages = [{ include = "concord" }]

[tool.poetry.scripts]
concord = "concord.cli:app"        # CLI entry-point  →  `concord …`

[tool.poetry.dependencies]
python                 = "^3.10"

# Core libs
pandas                 = "^2.2"
sentence-transformers  = "^2.7"     # pulls torch, transformers
httpx                  = "^0.27"
typer                  = "^0.9"
pyyaml                 = "^6.0"

# Optional GPU / scientific stack (already brought in by sentence-transformers)
torch                  = { version = "^2.2", optional = true }

[tool.poetry.extras]
gpu = ["torch"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"